[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/EscolhaLevel.gd" type="Script" id=1]
[ext_resource path="res://Sprits/botoes/tela1.png" type="Texture" id=2]
[ext_resource path="res://Sprits/puxar1.png" type="Texture" id=3]
[ext_resource path="res://Sprits/puxar2.png" type="Texture" id=4]
[ext_resource path="res://Sprits/botoes/fechar.png" type="Texture" id=5]
[ext_resource path="res://Scenas/Level.tscn" type="PackedScene" id=6]

[node name="EscolhaLevel" type="Node2D"]

pause_mode = 2
position = Vector2( 0, 2.7207 )
script = ExtResource( 1 )

[node name="ColorFrame" type="ColorRect" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags_horizontal = 1
size_flags_vertical = 1
margin_left = -17.0
margin_top = -19.0
margin_right = 1295.0
margin_bottom = 739.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_lock_": true
}
mouse_filter = 0

[node name="Sprite" type="Sprite" parent="."]

position = Vector2( 641.3, 447.733 )
scale = Vector2( 0.808382, 1.02987 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Retorna" type="TouchScreenButton" parent="."]

position = Vector2( 866.749, 615.986 )
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="Retorna"]

position = Vector2( 39.0001, 40.0001 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 5 )

[node name="Level1" parent="." instance=ExtResource( 6 )]

position = Vector2( 427.01, 519.618 )
scale = Vector2( 0.5, 0.5 )
level = 1

[node name="Level2" parent="." instance=ExtResource( 6 )]

position = Vector2( 596.011, 400.618 )
scale = Vector2( 0.5, 0.5 )
level = 2

[node name="Level3" parent="." instance=ExtResource( 6 )]

position = Vector2( 764.705, 284.209 )
scale = Vector2( 0.5, 0.5 )
level = 3

[connection signal="pressed" from="Retorna" to="." method="_on_Retorna_pressed" binds=[  ]]
[editable path="Level1"]
